# wasm3

android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/yaji/wasm3lib/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  m3  native-lib.cpp
android/app/src/main/java/com/yaji/wasm3lib/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/yaji/wasm3lib/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
source/: m3_config.h  m3_core.h  m3_env.c  m3_env.h  m3_exec.h  m3_exec_defs.h  m3_module.c  m3_parse.c  wasm3.h
wasm3.xcodeproj/: project.pbxproj
